[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'

[tool.poetry]
name = "django-tree"
description = "Fast and easy tree structures."
version = "0.5.6"
license = "BSD"
packages = [
  { include = "tree" }
]

authors = [
  "Bertrand Bordage <bordage.bertrand@gmail.com>",
]

readme = "README.rst"

repository = "https://github.com/BertrandBordage/django-tree"

keywords = [
  "django",
  "django-tree",
  "tree",
]

classifiers = [
  'Development Status :: 3 - Alpha',
  'Framework :: Django',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Internet :: WWW/HTTP',
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<5.1"

[tool.poetry.group.test.dependencies]
black = ">=22.12,<24.0"

safety = "^2.3"

pytest = "^7.4.3"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"
pytest-django = "^4.5.2"
hypothesis = "^6.87.1"

doc8 = "^0.11.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0,<8.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.19.5"
m2r2 = "^0.3"
tomlkit = ">=0.11,<0.13"
